--- a/lesson2/html/shoppingList.html
+++ b/lesson2/html/shoppingList.html
@@ -7,7 +7,6 @@
     <title>H3-Shopping List</title>
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     
@@ -16,23 +15,45 @@
     </head>
 
 <body>
-
     <form id='my-form' class="container-sm border p-5 my-5 round" onsubmit="formSubmitHandler(event)">
-
-        <div class="row">
-            <div class="col-7">
-              <input type="text" class="form-control" placeholder="Product" name="product" required>
-            </div>
-            <div class="col-3">
-              <input type="number" class="form-control" placeholder="Quantity" name="qty" max="30" min="1" required>
-            </div>
-            <div class="col-2">
-            <button type="submit" class="btn btn-primary">Add</button>
-            </div>
+      <div class="container-md row mb-2">
+        <div class="container-sm col-sm-6 col-xs-12 d-inline-flex justify-content-center my-1">
+            <input type="text" class="form-control" placeholder="Product" name="product" required>
         </div>
+        <div class="container-sm col-sm-4 col-xs-12 d-inline-flex justify-content-center my-1">
+            <input type="number" class="form-control" placeholder="Quantity" name="qty" max="30" min="1" required>
+        </div>
+        <div class="container-sm col-sm-2 col-xs-12 d-inline-flex justify-content-center my-1">
+            <button type="submit" class="btn btn-primary">Add</button>
+        </div>
+      </div>
+  </form>
+  <!-- <form 
+  id='my-form' 
+  class="container-sm round my-3 p-0" 
+  onsubmit="formSubmitHandler(event)">
+  
+  <div class="row">
+      <div class="col-sm-6 col-xs-12 my-2">
+      <input 
+          type="text" 
+          class="form-control shadow bg-body-tertiary rounded" 
+          placeholder="Product" 
+          name="product"
+          >
+      </div>
+      <div class="col-sm-3 col-xs-12 my-2">
+      <input type="number" 
+          class="form-control shadow bg-body-tertiary rounded" 
+          placeholder="Qty" 
+          name="qty">
+      </div>
+      <div class="col-sm-3 col-xs-12 my-2">
+      <button type="submit" class="btn btn-primary w-100">Add</button>
+      </div>
+  </div>
 
-    </form>
-
+</form> -->
     <ul id="products" class="container-sm border p-5 my-5 list-group">
     </ul>
     
