--- a/lesson3/timer.html
+++ b/lesson3/timer.html
@@ -14,15 +14,12 @@
     <form id='my-form' class="container-6 p-5 my-5 round align-text-center" onsubmit="formSubmitHandler(event)">
         <div class="row d-flex justify-content-center">
             <div class="col-sm-2 d-flex justify-content-center my-2">
-                <input id="sec-input" type="number" class="form-control text-center" placeholder="Timeout in seconds" name="timeout" required>
+                <input id="sec-input" type="number" class="form-control text-center" placeholder="Timeout in seconds" name="timeout" min="1" required>
             </div> 
             <div class="col-sm-2 d-flex justify-content-center my-2">
                 <button id="start-button" type="submit" class="btn btn-primary">Start</button>
             </div>
         </div>        
     </form>
-    
-        
-    </div>
 </body>
 </html>
