--- a/lesson3/timer.html
+++ b/lesson3/timer.html
@@ -2,21 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./style.css" rel="stylesheet">
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
     <title>Timer</title> 
 </head>
 <body>
-    <form id='my-form' class="container-6 p-5 my-5 round align-text-center" onsubmit="formSubmitHandler(event)">
+    <div class="row d-flex justify-content-center">
+        <h1 class="text-center mt-3">Timeout App</h1>
+    </div>
+    <form id='my-form' class="container-6 p-5 round align-text-center" onsubmit="formSubmitHandler(event)">
         <div class="row d-flex justify-content-center">
-            <div class="col-sm-2 d-flex justify-content-center my-2">
-                <input id="sec-input" type="number" class="form-control text-center" placeholder="Timeout in seconds" name="timeout" min="1" required>
+            <div id="sec-input-container" class="col-sm-2 d-flex justify-content-center ml-2">
+                <input id="sec-input" type="number" class="form-control text-center m-1" placeholder="Timeout in seconds" name="timeout" min="1" required>
             </div> 
-            <div class="col-sm-2 d-flex justify-content-center my-2">
+            <div id="start-button-container" class="col-sm-2 d-flex justify-content-center">
                 <button id="start-button" type="submit" class="btn btn-primary">Start</button>
             </div>
         </div>        
