--- a/lesson3/timer.html
+++ b/lesson3/timer.html
@@ -14,7 +14,8 @@
     <script src="script.js"></script>
     <title>Timer</title> 
 </head>
-<body>
+
+<body onload="checkStorage(event)">
     <div class="row d-flex justify-content-center">
         <h1 class="text-center mt-3">Timeout App</h1>
     </div>
